tests/ui/traits/const-traits/default-method-body-is-const-body-checking.stderr
error[E0277]: the trait bound `(): [const] Tr` is not satisfied
  --> $DIR/default-method-body-is-const-body-checking.rs:12:15
   |
LL |         foo::<()>();
   |               ^^
   |
note: required by a bound in `foo`
  --> $DIR/default-method-body-is-const-body-checking.rs:7:28
   |
LL | const fn foo<T>() where T: [const] Tr {}
   |                            ^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
